--- a/lab-3/index.html
+++ b/lab-3/index.html
@@ -9,27 +9,94 @@
             font-family: 'CrazyFont';
             src: url('Action_Man-webfont.woff') format('woff');
         }
-        
+
         body {
             font-family: 'CrazyFont', sans-serif;
-            background-color: #f0f0f0;
+            background-color: #e6e6fa;
+            background-image: linear-gradient(135deg, #e6e6fa 25%, #d3cce3 100%);
             color: #333;
-            line-height: 1.6;
+            line-height: 1.8;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
         }
 
-        header, footer {
+        header {
             background-color: #333;
             color: #fff;
             text-align: center;
-            padding: 1rem;
+            padding: 1.5rem;
+            border-bottom: 5px solid #ff7f50;
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 2.5rem;
+            letter-spacing: 2px;
         }
 
         main {
-            padding: 2rem;
+            padding: 2.5rem;
+            margin: auto;
+            width: 80%;
+            max-width: 900px;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+            position: relative;
+            top: -30px;
         }
 
         article {
-            margin-bottom: 2rem;
+            margin-bottom: 2.5rem;
+        }
+
+        h2 {
+            color: #ff7f50;
+            font-size: 2rem;
+            margin-bottom: 1rem;
+            text-align: left;
+        }
+
+        p, ol {
+            font-size: 1.1rem;
+            margin-bottom: 1.5rem;
+        }
+
+        ol li {
+            margin-bottom: 0.75rem;
+        }
+
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 1.5rem;
+            border-top: 5px solid #ff7f50;
+            position: relative;
+            top: -20px;
+        }
+
+        footer p {
+            margin: 0;
+            font-size: 0.9rem;
+        }
+
+        @media (max-width: 768px) {
+            main {
+                width: 90%;
+                padding: 2rem;
+            }
+
+            h1, h2 {
+                font-size: 1.8rem;
+            }
+
+            p, ol {
+                font-size: 1rem;
+            }
         }
     </style>
 </head>
@@ -44,7 +111,7 @@
                 <h2>How to Serve Fonts to a Browser</h2>
             </header>
             <section>
-                <p>This example shows how to utilize the @font-face rule in CSS to provide a custom font. The font file is stored on the server and sent to the user’s browser during page load. If the font isn’t already on the user’s device, it will be downloaded and applied to the text.</p>
+                <p>This example demonstrates how to use the @font-face rule in CSS to serve a custom font. The font file is hosted on the server and delivered to the client’s browser when the page is loaded. If the font is not installed on the user's device, it will be downloaded and applied to the text on the page.</p>
             </section>
         </article>
         
