--- a/lab-3/index.html
+++ b/lab-3/index.html
@@ -10,6 +10,17 @@
             src: url('Action_Man-webfont.woff') format('woff');
         }
 
+        @font-face {
+            font-family: 'CrazyFont1';
+            src: url('After_Shok-webfont.woff') format('woff');
+        }
+
+        @font-face {
+            font-family: 'CrazyFont2';
+            src: url('HOMINIS-webfont.woff') format('woff');
+        }
+
+
         body {
             font-family: 'CrazyFont', sans-serif;
             background-color: #e6e6fa;
@@ -24,6 +35,7 @@
         }
 
         header {
+            font-family: 'CrazyFont1';
             background-color: #333;
             color: #fff;
             text-align: center;
@@ -70,6 +82,7 @@
         }
 
         footer {
+            font-family: 'CrazyFont2';
             background-color: #333;
             color: #fff;
             text-align: center;
