--- a/lab-4/index.html
+++ b/lab-4/index.html
@@ -55,27 +55,27 @@
         </header>
         <section>
             <h3>Font Choices</h3>
-            <p>I chose a clean, modern sans-serif font like 'Arial' for its readability and professional look. The font aligns with the academic nature of the research, providing clarity and simplicity for the text-heavy content.</p>
+            <p>I chose 'Roboto', a modern, clean sans-serif font, which is widely used for professional projects due to its readability and minimalist design. It offers a balance between clarity and sophistication, suitable for academic work.</p>
         </section>
 
         <section>
             <h3>Heading and Text Sizes</h3>
-            <p>The <code>&lt;h1&gt;</code> heading size is set at 36px to stand out as the main title. <code>&lt;h2&gt;</code> headings are slightly smaller at 28px, while <code>&lt;p&gt;</code> text is sized at 16px for comfortable reading. The proportional scaling ensures clear visual hierarchy.</p>
+            <p>The main heading (<code>&lt;h1&gt;</code>) is set to 40px for prominence, while subheadings (<code>&lt;h2&gt;</code>) are 30px, ensuring a clear hierarchy. Body text is 18px for readability, with a line-height of 1.6 to reduce eye strain during longer readings.</p>
         </section>
 
         <section>
             <h3>Color Choices</h3>
-            <p>I used a white background (#ffffff) for contrast against black text (#000000), ensuring high readability. For headings, I applied a dark blue (#002147), which complements the professional tone of the paper while maintaining accessibility.</p>
+            <p>The background uses a professional gradient transitioning from light gray (#f5f5f5) to white (#ffffff), providing subtle depth without being distracting. Text is dark gray (#333333) for easy readability, and headings use a navy blue (#1a237e) for emphasis, maintaining a formal and academic tone.</p>
         </section>
 
         <section>
             <h3>Margins and Padding</h3>
-            <p>The document as a whole includes generous padding (20px) and margins (30px) around the body for a clean, spacious layout. Individual sections and headings have padding to create distinct separation without overwhelming the reader.</p>
+            <p>The page includes consistent padding of 20px to give the content space to breathe, and the body has a margin of 40px auto to center it on larger screens. Headings and sections are given additional padding to create distinct sections without crowding.</p>
         </section>
 
         <section>
             <h3>HTML Abuse</h3>
-            <p>Initially, I incorrectly used an <code>&lt;h2&gt;</code> tag for the essay title because of how it looked, but that was incorrect. I have since replaced it with the appropriate <code>&lt;h1&gt;</code> tag to reflect the proper document structure.</p>
+            <p>Initially, I used <code>&lt;h2&gt;</code> for the title, but this was incorrect. I replaced it with <code>&lt;h1&gt;</code> for the main title to respect proper document hierarchy. I also replaced <code>&lt;b&gt;</code> with <code>&lt;strong&gt;</code> for emphasis, as it semantically conveys importance.</p>
         </section>
     </article>
 
