--- a/lab-4/index.html
+++ b/lab-4/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Analysis and Classification of Blood Cancer using Protein Sequences</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css"> <!-- Link to CSS file -->
 </head>
 <body>
 
@@ -14,6 +14,7 @@
         <p><strong>School of Computer Science Engineering & Information Science, Presidency University, Bengaluru, India</strong></p>
     </header>
 
+    <!-- First article for the paper content -->
     <article>
         <header>
             <h2>Abstract</h2>
@@ -49,6 +50,7 @@
         </section>
     </article>
 
+    <!-- Second article for the addendum -->
     <article>
         <header>
             <h2>Stylistic Choices Addendum</h2>
