--- a/mid-term-project/index.html
+++ b/mid-term-project/index.html
@@ -39,7 +39,8 @@
     <audio id="backgroundMusic" src="assets/background.mp3" loop preload="auto"></audio>
     <audio id="clickSound" src="assets/click.mp3" preload="auto"></audio>
 
-    <script src="script.js" type="module"></script>
+    <!-- Note: Remove type="module" to make functions globally accessible -->
+    <script src="script.js"></script>
     <script>
         document.getElementById("lastModified").textContent = document.lastModified;
     </script>
