--- a/mid-term-project/index.html
+++ b/mid-term-project/index.html
@@ -39,7 +39,7 @@
     <audio id="backgroundMusic" src="assets/background.mp3" loop preload="auto"></audio>
     <audio id="clickSound" src="assets/click.mp3" preload="auto"></audio>
 
-    <!-- Note: Remove type="module" to make functions globally accessible -->
+    <!-- Ensure script.js is linked correctly -->
     <script src="script.js"></script>
     <script>
         document.getElementById("lastModified").textContent = document.lastModified;
