--- a/mid-term-project/index.html
+++ b/mid-term-project/index.html
@@ -28,8 +28,11 @@
             </div>
         </section>
 
-        <button id="toggleMusic">🔊 Toggle Music</button>
-        <button id="addendumBtn" onclick="openAddendum()">📜 Addendum</button>
+        <!-- Flexbox container for buttons -->
+        <div id="buttonContainer">
+            <button id="toggleMusic">🔊 Toggle Music</button>
+            <button id="addendumBtn" onclick="openAddendum()">📜 Addendum</button>
+        </div>
     </main>
 
     <footer>
