--- a/mid-term-project/index.html
+++ b/mid-term-project/index.html
@@ -14,7 +14,7 @@
 
     <main>
         <section id="storyContainer">
-            <img id="storyImage" src="images/start.jpg" alt="Start image" style="width: 100%; max-height: 400px; object-fit: cover; border-radius: 10px; margin-bottom: 20px;">
+            <img id="storyImage" src="assets/1.jpeg" alt="Start image" class="story-image">
             <div id="storyText">Your journey begins...</div>
             <div id="choices" class="choices-grid"></div>
         </section>
