--- a/mid-term-project/index.html
+++ b/mid-term-project/index.html
@@ -30,18 +30,19 @@
         </section>
 
         <button id="toggleMusic">🔊 Toggle Music</button>
+        <button id="addendumBtn" onclick="toggleAddendum()">📜 Addendum</button>
+
+        <div id="addendumModal" class="modal">
+            <div class="modal-content">
+                <span class="close" onclick="toggleAddendum()">&times;</span>
+                <h2>Addendum</h2>
+                <p id="addendumContent">In the beginning, you are tasked with finding the missing AI that controls vital city functions. Choose your actions wisely, as every choice will lead to a different part of the story with unique challenges and opportunities.</p>
+            </div>
+        </div>
     </main>
 
     <footer>
         <p>Last updated: <span id="lastModified"></span></p>
-        <button id="addendumBtn" onclick="toggleAddendum()">📜 Addendum</button>
-        <div id="addendum" class="modal">
-            <div class="modal-content">
-                <span class="close" onclick="toggleAddendum()">&times;</span>
-                <h2>Addendum</h2>
-                <p id="addendumContent">In the beginning, you are tasked with finding the missing AI that controls vital city functions. Choose your actions wisely, as every choice will lead to a different part of the story with unique challenges and opportunities. Technical strategies such as data decryption, surveillance analysis, and access point tracing are integrated to enrich the detective experience.</p>
-            </div>
-        </div>
     </footer>
 
     <!-- Audio Elements for Sound Effects -->
