--- a/mid-term-project/index.html
+++ b/mid-term-project/index.html
@@ -35,7 +35,7 @@
 
         <!-- Music Toggle, Addendum, and Technical Addendum Buttons -->
         <button id="toggleMusic">🔊 Toggle Music</button>
-        <button id="addendumBtn" onclick="toggleAddendum()">📜 Addendum</button>
+        <button id="addendumBtn" onclick="toggleAddendum()">📜 Story Addendum</button>
         <button id="technicalAddendumBtn" onclick="toggleTechnicalAddendum()">📘 Technical Addendum</button>
 
         <!-- Addendum Modal -->
