--- a/mid-term-project/index.html
+++ b/mid-term-project/index.html
@@ -33,7 +33,7 @@
             </div>
         </section>
 
-        <!-- Music Toggle and Addendum Buttons -->
+        <!-- Music Toggle, Addendum, and Technical Addendum Buttons -->
         <button id="toggleMusic">🔊 Toggle Music</button>
         <button id="addendumBtn" onclick="toggleAddendum()">📜 Addendum</button>
         <button id="technicalAddendumBtn" onclick="toggleTechnicalAddendum()">📜 Technical Addendum</button>
@@ -54,9 +54,7 @@
             <div class="modal-content">
                 <span class="close" onclick="toggleTechnicalAddendum()">&times;</span>
                 <h2>Technical Addendum</h2>
-                <div id="technicalAddendumContent">
-                    <!-- Technical addendum content will be injected here from JavaScript -->
-                </div>
+                <div id="technicalAddendumContent"></div>
             </div>
         </div>
     </main>
